clusters/main/kubernetes/apps/authentik/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: authentik
    annotations:
        volsync.backube/privileged-movers: "true"
    labels:
        goldilocks.fairwinds.com/enabled: "true"
